fin des differentes classes du cv et debut du formulaires

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 a faire :
-_education
-_contact
-_experience
-_competence : savoir etre et savoir faire
+terminer le formulaire
+
+
+https://youtu.be/yNuVTmNW2ow?si=_lYlVIahmtn77JNz
