fin des differentes classes du cv et debut du formulaires

--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 a faire :
 terminer le formulaire
+instancier les classes restantes
+faire en sorte qu on puisse avoir plusieur formation scolaire
+
 
 
 https://youtu.be/yNuVTmNW2ow?si=_lYlVIahmtn77JNz
