format pdf fonctionnel

--- a/README
+++ b/README
@@ -1,8 +1,1 @@
-a faire :
-terminer le formulaire
-instancier les classes restantes
-faire en sorte qu on puisse avoir plusieur formation scolaire
-
-
-
-https://youtu.be/yNuVTmNW2ow?si=_lYlVIahmtn77JNz
+finir la modif des cv , download , delete
